# oxalis-challenge

./: .env  Dockerfile  README.md  app.py  build.sh  docker-compose.yml  pyproject.toml  requirements.txt  run.sh
.devcontainer/: devcontainer.json  docker-compose.yml
dbt/oxalis_challenge/: dbt_project.yml
dbt/oxalis_challenge/models/: sources.yml
dbt/oxalis_challenge/models/marts/: dim_ledger__product.sql  dim_ledger__store.sql  fct_ledger__transactions.sql  properties.yml
dbt/oxalis_challenge/models/report/: rpt_ledger__revenue.sql  rpt_ledger__sales_qty.sql
dbt/oxalis_challenge/models/staging/: properties.yml  stg_ledger__transactions.sql
oxalis_challenge/: cli.py  config.py  data_cleaners.py  psql_loaders.py
