[tool.poetry]
name = "oxalis-challenge"
version = "0.1.0"
description = ""
authors = ["Greg Conan <gregmconan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
inflection = "0.5.1"
pandas = "2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
