[tool.poetry]
name = "oxalis-challenge"
version = "0.1.3"
description = ""
authors = ["Greg Conan <gregmconan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
inflection = "^0.5.1"
pandas = "^2.2.3"
dbt-core = "^1.9.4"
dbt-postgres = "^1.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
